--- a/CarrierPortal/Code/PartnerPortal.CustomerAccess.MainExtensions/PartnerPortal.CustomerAccess.MainExtensions.csproj
+++ b/CarrierPortal/Code/PartnerPortal.CustomerAccess.MainExtensions/PartnerPortal.CustomerAccess.MainExtensions.csproj
@@ -47,6 +47,13 @@
     <Reference Include="Vanrise.AccountBalance.Entities">
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.AccountBalance.Entities.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Analytic.Business">
+      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Analytic.Business.dll</HintPath>
+    </Reference>
+    <Reference Include="Vanrise.Analytic.Entities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Analytic.Entities.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Common.dll</HintPath>
@@ -79,6 +86,7 @@
     <Compile Include="AccountStatement\DefaultAccountStatementExtendedSettings.cs" />
     <Compile Include="AccountStatement\RetailAccountUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VRRestAPIAnalyticQueryInterceptor\RetailAccountVRRestAPIAnalyticQueryInterceptor.cs" />
     <Compile Include="VRRestAPIRecordQueryInterceptor\RetailAccountVRRestAPIRecordQueryInterceptor.cs" />
   </ItemGroup>
   <ItemGroup>
