--- a/Vanrise/Code/Vanrise.Analytic.Entities/Vanrise.Analytic.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Analytic.Entities/Vanrise.Analytic.Entities.csproj
@@ -76,10 +76,13 @@
     <Compile Include="Config\Aggregate\AnalyticAggregateConfig.cs" />
     <Compile Include="Config\Aggregate\AnalyticAggregateConfigInfo.cs" />
     <Compile Include="Config\Aggregate\AnalyticAggregateConfigInfoFilter.cs" />
+    <Compile Include="AnalyticDataProvider\AnalyticDataProvider.cs" />
+    <Compile Include="AnalyticDataProvider\AnalyticDataProviderConfig.cs" />
+    <Compile Include="VRRestAPIAnalyticQueryInterceptor\VRRestAPIAnalyticQueryInterceptorConfig.cs" />
     <Compile Include="Config\AnalyticItemConfigDetail.cs" />
     <Compile Include="Config\AnalyticItemConfigInput.cs" />
     <Compile Include="Config\AnalyticItemConfigQuery.cs" />
-    <Compile Include="Config\AnalyticTableInfoFilter.cs" />
+    <Compile Include="AnalyticTable\AnalyticTableInfoFilter.cs" />
     <Compile Include="Config\Dimension\AnalyticDimension.cs" />
     <Compile Include="Config\Dimension\AnalyticDimensionConfig.cs" />
     <Compile Include="Config\Dimension\AnalyticDimensionConfigInfo.cs" />
@@ -97,15 +100,16 @@
     <Compile Include="Config\Measure\AnalyticMeasure.cs" />
     <Compile Include="Config\Measure\AnalyticMeasureConfigInfo.cs" />
     <Compile Include="Config\Measure\AnalyticMeasureConfigInfoFilter.cs" />
-    <Compile Include="Config\AnalyticTable.cs" />
-    <Compile Include="Config\AnalyticTableInfo.cs" />
-    <Compile Include="Config\AnalyticTableSettings.cs" />
+    <Compile Include="AnalyticTable\AnalyticTable.cs" />
+    <Compile Include="AnalyticTable\AnalyticTableInfo.cs" />
+    <Compile Include="AnalyticTable\AnalyticTableSettings.cs" />
     <Compile Include="Config\AnalyticItemConfig.cs" />
     <Compile Include="Config\Join\AnalyticJoinConfig.cs" />
     <Compile Include="Config\Measure\AnalyticMeasureConfig.cs" />
     <Compile Include="Config\Measure\IMeasureEvaluator.cs" />
     <Compile Include="Config\Measure\AnalyticMeasureConfigQuery.cs" />
     <Compile Include="Config\Measure\RemoteAnalyticMeasureConfigInfo.cs" />
+    <Compile Include="VRRestAPIAnalyticQueryInterceptor\VRRestAPIAnalyticQueryInterceptor.cs" />
     <Compile Include="DataAnalysis\Common\DARecordAggregate.cs" />
     <Compile Include="DataAnalysis\ProfilingAndCalculation\Common\DAProfCalcOutputFieldFilter.cs" />
     <Compile Include="DataAnalysis\ProfilingAndCalculation\Common\DAProfCalcOutputField.cs" />
