--- a/Vanrise/Code/Vanrise.Analytic.Business/Vanrise.Analytic.Business.csproj
+++ b/Vanrise/Code/Vanrise.Analytic.Business/Vanrise.Analytic.Business.csproj
@@ -75,6 +75,10 @@
     <Compile Include="MemoryAnalyticDataProvider\MemoryAnalyticDataProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StyleRuleConditionContext.cs" />
+    <Compile Include="VRRestAPIDataProvider\GetRemoteAnalyticDataProviderContext.cs" />
+    <Compile Include="VRRestAPIDataProvider\RemoteAnalyticDataProvider.cs" />
+    <Compile Include="VRRestAPIDataProvider\VRRestAPIAnalyticDataProvider.cs" />
+    <Compile Include="VRRestAPIAnalyticQueryInterceptor\VRRestAPIAnalyticQueryInterceptorContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vanrise.Analytic.BP.Arguments\Vanrise.Analytic.BP.Arguments.csproj">
