--- a/Vanrise/Code/Vanrise.Analytic.Web/Vanrise.Analytic.Web.csproj
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Vanrise.Analytic.Web.csproj
@@ -239,8 +239,10 @@
     <Content Include="Analytic\Directives\MainExtensions\AnalyticDataProvider\Templates\MemoryAnalyticDataProviderTemplate.html" />
     <Content Include="Analytic\Directives\MainExtensions\AnalyticDataProvider\Templates\PostgresAnalyticDataProviderTemplate.html" />
     <Content Include="Analytic\Directives\MainExtensions\AnalyticDataProvider\Templates\SqlAnalyticDataProviderTemplate.html" />
+    <Content Include="Analytic\Directives\MainExtensions\AnalyticDataProvider\Templates\VRRestAPIAnalyticDataProviderTemplate.html" />
     <Content Include="Analytic\Directives\MainExtensions\AnalyticDataProvider\vr-analytic-postgres-dataprovider.js" />
     <Content Include="Analytic\Directives\MainExtensions\AnalyticDataProvider\vr-analytic-sql-dataprovider.js" />
+    <Content Include="Analytic\Directives\MainExtensions\AnalyticDataProvider\vr-analytic-restapi-dataprovider.js" />
     <Content Include="Analytic\Directives\MainExtensions\DARecordAggregates\Templates\CountAggregateTemplate.html" />
     <Content Include="Analytic\Directives\MainExtensions\DARecordAggregates\Templates\DistinctCountAggregateTemplate.html" />
     <Content Include="Analytic\Directives\MainExtensions\DARecordAggregates\Templates\SumAggregateTemplate.html" />
@@ -274,6 +276,8 @@
     <Content Include="Analytic\Directives\Runtime\Grid\vr-analytic-datagrid-analyticrecords.js" />
     <Content Include="Analytic\Directives\Definition\MainExtensions\AnalyticReport\History\SearchSettings\Templates\GenericSearchTemplate.html" />
     <Content Include="Analytic\Directives\Definition\MainExtensions\AnalyticReport\History\SearchSettings\vr-analytic-reportsearchsettings-genericsearch.js" />
+    <Content Include="Analytic\Directives\VRRestAPIAnalyticQueryInterceptor\Templates\VRRestAPIAnalyticQueryInterceptorSelectiveTemplate.html" />
+    <Content Include="Analytic\Directives\VRRestAPIAnalyticQueryInterceptor\vr-analytic-restapianalyticqueryinterceptor-selective.js" />
     <Content Include="Analytic\ModuleInitialization.js" />
     <Content Include="Analytic\Services\AnalyticItemActionService.js" />
     <Content Include="Analytic\Services\AnalyticItemConfigService.js" />
