--- a/CarrierPortal/Code/PartnerPortal.CustomerAccess.Business/PartnerPortal.CustomerAccess.Business.csproj
+++ b/CarrierPortal/Code/PartnerPortal.CustomerAccess.Business/PartnerPortal.CustomerAccess.Business.csproj
@@ -57,6 +57,10 @@
     <Reference Include="Vanrise.Analytic.Entities">
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Analytic.Entities.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Caching, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Caching.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Common">
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Common.dll</HintPath>
     </Reference>
@@ -98,6 +102,7 @@
     <Compile Include="DIDTileDefinitionSettings.cs" />
     <Compile Include="LiveBalanceTileDefinitionSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RetailAccountBEManager.cs" />
     <Compile Include="RetailAccountInfoManager.cs" />
     <Compile Include="RetailAccountInfoTileDefinitionSettings.cs" />
     <Compile Include="RetailAccountUserManager.cs" />
