change class name
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44205

--- a/Retail/Code/Retail.BusinessEntity.APIEntities/Retail.BusinessEntity.APIEntities.csproj
+++ b/Retail/Code/Retail.BusinessEntity.APIEntities/Retail.BusinessEntity.APIEntities.csproj
@@ -51,7 +51,7 @@
   <ItemGroup>
     <Compile Include="AccountClientDetail.cs" />
     <Compile Include="ClientBalanceAccountInfo.cs" />
-    <Compile Include="ClientChildAccountInfo.cs" />
+    <Compile Include="ClientAccountInfo.cs" />
     <Compile Include="ClientGenericFieldDefinitionInfo.cs" />
     <Compile Include="ClientInvoiceAccountInfo.cs" />
     <Compile Include="ClientRetailProfileAccountInfo.cs" />
