Refactor Migration, Add Effective After Date for migrating entities
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44209

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
@@ -214,6 +214,7 @@
     <Content Include="WhS_BusinessEntity\Constant\FinancialAccountCarrierTypeEnum.js" />
     <Content Include="WhS_BusinessEntity\Constant\FinancialAccountPropertyEnum.js" />
     <Content Include="WhS_BusinessEntity\Constant\FinancialAccountStatusEnum.js" />
+    <Content Include="WhS_BusinessEntity\Constant\MigrationEffectiveDateTypeEnum.js" />
     <Content Include="WhS_BusinessEntity\Constant\PriceListExtensionFormatEnum.js" />
     <Content Include="WhS_BusinessEntity\Constant\PeriodTypeEnum.js" />
     <Content Include="WhS_BusinessEntity\Constant\ProfilePropertyEnum.js" />
