--- a/Vanrise/Code/Vanrise.AccountManager.Entities/Vanrise.AccountManager.Entities.csproj
+++ b/Vanrise/Code/Vanrise.AccountManager.Entities/Vanrise.AccountManager.Entities.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="AccountManager.cs" />
     <Compile Include="AccountManagerAssignment.cs" />
+    <Compile Include="AccountManagerAssignmentConfigs.cs" />
     <Compile Include="AccountManagerDefinitionConfig.cs" />
     <Compile Include="AccountManagerDetail.cs" />
     <Compile Include="AccountManagerQuery.cs" />
