--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
@@ -355,6 +355,8 @@
     <Content Include="WhS_BusinessEntity\Directives\MainExtensions\VRObjectTypes\whs-be-financialaccountobjecttype.js" />
     <Content Include="WhS_BusinessEntity\Directives\MainExtensions\VRObjectTypes\whs-be-financialaccountpropertyevaluator.js" />
     <Content Include="WhS_BusinessEntity\Directives\Period\vr-whs-be-period-selector.js" />
+    <Content Include="WhS_BusinessEntity\Directives\SaleAreaTechnicalSettings\Templates\SaleAreaTechnicalSettingsTemplate.html" />
+    <Content Include="WhS_BusinessEntity\Directives\SaleAreaTechnicalSettings\vr-whs-be-salearea-technical-settings-editor.js" />
     <Content Include="WhS_BusinessEntity\Directives\SalePriceListChange\Templates\CustomerRatePreviewGrid.html" />
     <Content Include="WhS_BusinessEntity\Directives\SalePriceListChange\Templates\RoutingProductPreviewGrid.html" />
     <Content Include="WhS_BusinessEntity\Directives\SalePriceListChange\Templates\SalePricelistCodeTemplate.html" />
