Adding SaleAreaTechnicalSettings class
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44246

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Entities/TOne.WhS.BusinessEntity.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Entities/TOne.WhS.BusinessEntity.Entities.csproj
@@ -147,6 +147,7 @@
     <Compile Include="RoutingCarrierInfo\RoutingCarrierInfo.cs" />
     <Compile Include="RoutingCarrierInfo\RoutingCustomerInfo.cs" />
     <Compile Include="RoutingCarrierInfo\RoutingSupplierInfo.cs" />
+    <Compile Include="SaleAreaTechnicalSettings\SaleAreaTechnicalSettings.cs" />
     <Compile Include="SalePricelistChanges\CustomerRatePreview.cs" />
     <Compile Include="SalePricelistChanges\CustomerRatePreviewDetail.cs" />
     <Compile Include="SalePricelistChanges\CustomerRatePreviewQuery.cs" />
