--- a/Vanrise/Code/Vanrise.Rules.Entities/Vanrise.Rules.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Rules.Entities/Vanrise.Rules.Entities.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rule.cs" />
+    <Compile Include="RuleChanged.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vanrise.Common\Vanrise.Common.csproj">
