adding increment and sale areat technical settings
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44252

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Business/TOne.WhS.BusinessEntity.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Business/TOne.WhS.BusinessEntity.Business.csproj
@@ -113,6 +113,9 @@
     <Reference Include="Vanrise.Rules.Normalization">
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Rules.Normalization.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Rules.Pricing">
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Rules.Pricing.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Security.Business">
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Security.Business.dll</HintPath>
     </Reference>
