adding subViews Selective
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44257

--- a/Vanrise/Code/Vanrise.AccountManager.Entities/Vanrise.AccountManager.Entities.csproj
+++ b/Vanrise/Code/Vanrise.AccountManager.Entities/Vanrise.AccountManager.Entities.csproj
@@ -49,6 +49,7 @@
     <Compile Include="AccountManagerDefinitionConfig.cs" />
     <Compile Include="AccountManagerDetail.cs" />
     <Compile Include="AccountManagerQuery.cs" />
+    <Compile Include="AccountManagerSubViewsConfigs.cs" />
     <Compile Include="Definition\AccountManagerAssignmentDefinition.cs" />
     <Compile Include="Definition\AccountManagerSubViewDefinition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
