BPdefinition add(RunningProcessNumber,LastProcessCreatedTime) attributes
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44262

--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Entities/Vanrise.BusinessProcess.Entities.csproj
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Entities/Vanrise.BusinessProcess.Entities.csproj
@@ -67,6 +67,7 @@
     <Compile Include="BPDefinitionInfo.cs" />
     <Compile Include="BPDefinitionInfoFilter.cs" />
     <Compile Include="BPDefinitionQuery.cs" />
+    <Compile Include="BPDefinitionSummary.cs" />
     <Compile Include="BPEvent.cs" />
     <Compile Include="BPInstance.cs" />
     <Compile Include="BPInstanceProgressView.cs" />
