--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Entities/TOne.WhS.Sales.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Entities/TOne.WhS.Sales.Entities.csproj
@@ -90,7 +90,8 @@
     <Compile Include="PricingTemplate\PricingTemplateSettings.cs" />
     <Compile Include="PricingTemplate\RatePricingTemplate.cs" />
     <Compile Include="PricingTemplate\ZonePricingTemplate.cs" />
-    <Compile Include="RateManagement\Actions\Country\AllCustomerCountriesToChange.cs" />
+    <Compile Include="RateManagement\Country\AllCustomerCountriesToAdd.cs" />
+    <Compile Include="RateManagement\Country\AllCustomerCountriesToChange.cs" />
     <Compile Include="RateManagement\Zone\ZoneDataByCountryIds.cs" />
     <Compile Include="RatePlanning\CarrierAccount\AffectedCarrierAccountFilter.cs" />
     <Compile Include="SellingZonesWithDefaultRatesTaskData.cs" />
