Add reference to protobuf-net.dll
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44300

--- a/QualityMeasurement/Code/QualityMeasurement.Web/QualityMeasurement.Web.csproj
+++ b/QualityMeasurement/Code/QualityMeasurement.Web/QualityMeasurement.Web.csproj
@@ -74,6 +74,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Vanrise\Code\Resources\DLLs\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="protobuf-net">
+      <HintPath>..\..\..\Vanrise\Code\Resources\DLLs\protobuf-net.dll</HintPath>
+    </Reference>
     <Reference Include="RazorEngine, Version=3.8.2.0, Culture=neutral, PublicKeyToken=9ee697374c7e744a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Vanrise\Code\Resources\DLLs\RazorEngine.dll</HintPath>
