--- a/Mediation/Code/Mediation.Web/Mediation.Web.csproj
+++ b/Mediation/Code/Mediation.Web/Mediation.Web.csproj
@@ -469,6 +469,8 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="appSettings.config" />
+    <Content Include="ConnectionStrings.config" />
     <None Include="Properties\PublishProfiles\Mediation.pubxml" />
     <None Include="Web.config.exclude" />
     <None Include="Web.config.Debug.exclude">
