adding update and insert method for account manager assignments
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44375

--- a/Vanrise/Code/Vanrise.AccountManager.Business/Vanrise.AccountManager.Business.csproj
+++ b/Vanrise/Code/Vanrise.AccountManager.Business/Vanrise.AccountManager.Business.csproj
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Retail.BusinessEntity.Entities">
+      <HintPath>..\..\..\Retail\Code\Output\Retail.BusinessEntity.Entities.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
