--- a/Vanrise/Code/Vanrise.AccountManager.Data.SQL/Vanrise.AccountManager.Data.SQL.csproj
+++ b/Vanrise/Code/Vanrise.AccountManager.Data.SQL/Vanrise.AccountManager.Data.SQL.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountManagerAssignmentDataManager.cs" />
     <Compile Include="AccountManagerDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
