--- a/Vanrise/Code/Vanrise.AccountManager.Data/Vanrise.AccountManager.Data.csproj
+++ b/Vanrise/Code/Vanrise.AccountManager.Data/Vanrise.AccountManager.Data.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountManagerDataManagerFactory.cs" />
+    <Compile Include="IAccountManagerAssignmentDataManager.cs" />
     <Compile Include="IAccountManagerDataManager.cs" />
     <Compile Include="IDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
