--- a/Vanrise/Code/Vanrise.AccountManager.Entities/Vanrise.AccountManager.Entities.csproj
+++ b/Vanrise/Code/Vanrise.AccountManager.Entities/Vanrise.AccountManager.Entities.csproj
@@ -46,6 +46,7 @@
     <Compile Include="AccountManager.cs" />
     <Compile Include="AccountManagerAssignment.cs" />
     <Compile Include="AccountManagerAssignmentConfigs.cs" />
+    <Compile Include="AccountManagerAssignmentDetail.cs" />
     <Compile Include="AccountManagerDefinitionConfig.cs" />
     <Compile Include="AccountManagerDetail.cs" />
     <Compile Include="AccountManagerQuery.cs" />
